[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litminion"
version = "0.2.0"
description = "A Python framework for biomedical literature mining and natural language processing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Rebecca Sessa" }
]

keywords = [
    "biomedical",
    "bioinformatics",
    "literature-mining",
    "machine-learning",
    "medical-ai",
    "natural-language-processing",
    "nlp",
    "pubmed",
    "scientific-literature",
    "text-mining",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "biopython>=1.85",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "spacy>=3.8",
]

[project.optional-dependencies]

dev = [
    "black>=24.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

biomedical = [
    "scispacy>=0.5",
]

advanced = [
    "bertopic>=0.17",
    "sentence-transformers>=5.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]