[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litminion"
version = "0.5.0"
description = "A modular Python framework for biomedical literature mining and natural language processing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Rebecca Sessa" }
]

keywords = [
    "nlp",
    "biomedical",
    "pubmed",
    "text-mining",
    "literature-mining",
    "bioinformatics",
    "machine-learning",
    "natural-language-processing",
    "sentence-transformers",
    "keybert",
    "bertopic",
    "topic-modeling",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>=1.85",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "spacy>=3.8",
    "matplotlib>=3.9",
    "plotly>=6.0",
    "sentence-transformers>=5.0",
    "keybert>=0.9",
    "bertopic>=0.17",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

biomedical = [
    "scispacy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]